# 2D-Virtual-World-Simulator

./: README.md
OP_PROJECT_CPP/: Animal.h  CMakeLists.txt  OP_PROJECT_CPP  Organism.cpp  Organism.h  Plant.h  Position.h  World.cpp  World.h  main.cpp  world_save.txt
OP_PROJECT_CPP/Animals/: Antelope.h  Fox.h  Human.h  Sheep.h  Turtle.h  Wolf.h
OP_PROJECT_CPP/Plants/: Belladonna.h  Grass.h  Guarana.h  Sosnowsky_Hogweed.h  Sow_thistle.h
OP_PROJECT_JAVA/: world_save
OP_PROJECT_JAVA/src/game/: Animal.java  Main.java  Organism.java  OrganismGroup.java  OrganismType.java  Plant.java  Position.java  World.java  WorldPanel.java
OP_PROJECT_JAVA/src/game/Animals/: Antelope.java  Fox.java  Human.java  Sheep.java  Turtle.java  Wolf.java
OP_PROJECT_JAVA/src/game/Plants/: Belladonna.java  Grass.java  Guarana.java  SosnowskyHogweed.java  SowThistle.java
OP_PROJECT_PYTHON/src/game/: Animal.py  Organism.py  OrganismType.py  Plant.py  Position.py  World.py  WorldPanel.py  main.py  savefile.pkl
OP_PROJECT_PYTHON/src/game/Animals/: Antelope.py  CyberSheep.py  Fox.py  Human.py  Sheep.py  Turtle.py  Wolf.py
OP_PROJECT_PYTHON/src/game/Plants/: Belladonna.py  Grass.py  Guarana.py  SosnowskyHogweed.py  SowThistle.py
